(fix) update add record
